  - Removal of any methods deprecated earlier than 0.96.0.0.
    - Marked many deprecated methods with the version in which they were deprecated for easier future removal.
  - Update spanish.yml, courtesy of ElMoha943 with PR #4716.
  - Update es-419.yml, courtesy of EuGNosii with PR #4717.
  - Made GUI titles translatable.
    - Closes #4719.
  - Placeholders:
    - %townyadvanced_is_nation_peaceful%
    - %townyadvanced_is_town_peaceful%
    - If the player has a town/nation which is peaceful the language string "status_town_title_peaceful" will be shown: "&b(Peaceful)".
    - Addresses https://github.com/TownyAdvanced/SiegeWar/issues/72
  - Update spanish.yml, courtesy of ElMoha943 with PR #4722.
  - Update es-419.yml, courtesy of EuGNosii with PR #4723.
  - API: add convenience methods to TownyAPI:
    - getNation(name)
    - getTown(name)
    - getResident(name)
    - getNation(uuid)
    - getTown(uuid)
    - getResident(uuid)
  - Fix goofy replacing in TownySpigotMessaging sendSpigotConfirmMessage.
  - Fix regression in GUIs which made inventories unusable.
  - Fix "/res toggle reset" not resetting modes.
    - Closes #4730.
  - Fix empty-selection message showing when claiming single plots is blocked because the area is actually already claimed.
    - Closes #4729.
  - Custom Metadata Types, courtesy of silverwolfg11 with PR #4700.
  - Small HUDManager overhaul, courtesy of Warriorrrr with PR #4726.
  - API: new damage/pvp events:
    - TownBlockPVPTestEvent - thrown when a townblock in a town has the PVP status decided.
    - WildernessPVPTestEvent - thrown when determining what the wilderness status for PVP is.
    - TownyDamageEvent - Abstract event for the following:
    - TownyPlayerDamagePlayerEvent - used to override players hurting players.
    - TownyExplosionDamagesEntityEvent (Part of the earlier API expansion, now moved to the damage package and extending the TownyDamageEvent.)